--- a/hotelRestaurant/src/app/modules/client/layout-client/layout-client.component.html
+++ b/hotelRestaurant/src/app/modules/client/layout-client/layout-client.component.html
@@ -38,8 +38,8 @@
           <a routerLink="hoteles" (click)="onSidenavClose()" class="block py-2 pl-14 rounded-xl hover:bg-gray-700 hover:text-yellow-300">
             Listar Hoteles
           </a>
-          <a routerLink="habitaciones" (click)="onSidenavClose()" class="block py-2 pl-14 rounded-xl hover:bg-gray-700 hover:text-yellow-300">
-            Ver Habitaciones
+          <a routerLink="reservaciones" (click)="onSidenavClose()" class="block py-2 pl-14 rounded-xl hover:bg-gray-700 hover:text-yellow-300">
+            Ver Reservaciones
           </a>
         </div>
       </div>
