feat: created reservas admin

--- a/hotelRestaurant/src/app/modules/admin/components/layout-admin/layout-admin.component.html
+++ b/hotelRestaurant/src/app/modules/admin/components/layout-admin/layout-admin.component.html
@@ -15,6 +15,9 @@
     <a routerLink="cuartos" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
       Habitaciones
     </a>
+    <a routerLink="reservations" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
+      reservacion
+    </a>
     <a routerLink="empleados" routerLinkActive="text-yellow-400" class="hover:text-yellow-300">
       Empleados
     </a>
