feat: Client Configuration

--- a/hotelRestaurant/src/app/modules/client/layout-client/layout-client.component.html
+++ b/hotelRestaurant/src/app/modules/client/layout-client/layout-client.component.html
@@ -64,19 +64,12 @@
           <a routerLink="restaurantes" (click)="onSidenavClose()" class="block py-2 pl-14 rounded-xl hover:bg-gray-700 hover:text-yellow-300">
             Listar Restaurantes
           </a>
-          <a routerLink="/restaurantes/menu" (click)="onSidenavClose()" class="block py-2 pl-14 rounded-xl hover:bg-gray-700 hover:text-yellow-300">
-            Ver Menú
+          <a routerLink="pedidos" (click)="onSidenavClose()" class="block py-2 pl-14 rounded-xl hover:bg-gray-700 hover:text-yellow-300">
+            Ver Pedidos
           </a>
         </div>
       </div>
 
-      <!-- Reservas -->
-      <a routerLink="/mis-reservas" routerLinkActive="bg-gray-700 text-yellow-300 font-semibold shadow-md" class="flex items-center px-4 py-3 rounded-xl hover:bg-gray-700 hover:text-yellow-300 group" >
-        <svg class="h-6 w-6 mr-3 text-gray-400 group-hover:text-yellow-300 transition-colors duration-200" fill="currentColor" viewBox="0 0 24 24" >
-          <path d="M19 3h-2V1h-2v2H9V1H7v2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H5V9h14v12zM7 11h2v2H7zm0 4h2v2H7zm4-4h2v2h-2zm0 4h2v2h-2zm4-4h2v2h-2zm0 4h2v2h-2z" />
-        </svg>
-        Mis Reservas / Pedidos
-      </a>
           <!-- Perfil -->
        <a routerLink="perfil-cliente" routerLinkActive="bg-gray-700 text-yellow-300 font-semibold shadow-md" class="flex items-center px-4 py-3 rounded-xl hover:bg-gray-700 hover:text-yellow-300 group" >
         <svg class="h-6 w-6 mr-3 text-gray-400 group-hover:text-yellow-300 transition-colors duration-200" fill="currentColor" viewBox="0 0 24 24">
