--- a/hotelRestaurant/src/app/modules/client/hotel/detail-hoteles/detail-hoteles.component.html
+++ b/hotelRestaurant/src/app/modules/client/hotel/detail-hoteles/detail-hoteles.component.html
@@ -29,6 +29,33 @@
       </div>
     </div>
 
+  <div class="bg-white rounded-xl shadow-lg p-6 mb-6 border border-gray-200">
+  <h3 class="text-2xl font-bold text-gray-900 mb-4">Promociones del Hotel</h3>
+
+      @if (promotionsHotel.length > 0) {
+        <ul class="divide-y divide-gray-200">
+          @for (p of promotionsHotel; track p.id) {
+            <li class="py-3">
+              <div class="flex items-center justify-between">
+                <div>
+                  <p class="font-semibold text-blue-700">{{ p.name }}</p>
+                  <p class="text-sm text-gray-500">{{ p.description }}</p>
+                  <p class="text-sm text-pink-600 font-bold">
+                    {{ p.discountPercentage }}% de descuento
+                  </p>
+                </div>
+                <span class="text-xs text-gray-400">
+                  {{ p.startDate | date:'shortDate' }} - {{ p.endDate | date:'shortDate' }}
+                </span>
+              </div>
+            </li>
+          }
+        </ul>
+      } @else {
+        <p class="text-gray-500">Proximamente... GENERAL.</p>
+      }
+    </div>
+
     <!-- Lista de habitaciones -->
     <div class="max-w-4xl w-full">
       <h2 class="text-2xl font-bold text-gray-800 mb-4">Habitaciones de {{ hotel.name }}</h2>
@@ -48,7 +75,17 @@
       'bg-red-500 text-white': room.state === 'mantenimiento'
     }" class="px-2 py-1 rounded-full text-xs font-bold uppercase">{{ room.state }}</span>
   </p>
-  <p class="text-sm text-gray-500 mt-2">{{ room.description }}</p>
+        <p class="text-sm text-gray-500 mt-2">{{ room.description }}</p>
+      <!-- Promoción si existe -->
+      <div *ngIf="getPromotionForRoom(room.id!) as promo"
+          class="mt-3 p-3 rounded-lg bg-pink-50 border border-pink-200">
+        <p class="text-pink-700 font-bold">
+          ¡Promoción disponible! {{ promo.discountPercentage }}% de descuento
+        </p>
+        <p class="text-xs text-gray-500">
+          Válida del {{ promo.startDate | date:'shortDate' }} al {{ promo.endDate | date:'shortDate' }}
+        </p>
+      </div>
 
   <div class="mt-4 flex flex-col sm:flex-row sm:space-x-4 space-y-4 sm:space-y-0">
     <div class="flex-1">
