--- a/hotelRestaurant/src/app/modules/client/hotel/detail-hoteles/detail-hoteles.component.html
+++ b/hotelRestaurant/src/app/modules/client/hotel/detail-hoteles/detail-hoteles.component.html
@@ -24,6 +24,11 @@
             <p class="text-gray-600 flex items-center">
               Habitaciones Totales: {{ hotel.totalRooms }}
             </p>
+
+          <button (click)="verDetalles(hotel.id)"
+            class="mt-3 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+              Ver opiniones
+          </button>
           </div>
         </div>
       </div>
